--- a/scss/folium.scss
+++ b/scss/folium.scss
@@ -1,9 +1,8 @@
  
-@import "variables.scss";
-@import "mixins.scss";
-@import "global.scss";
-@import "navbar.scss";
+@import "variables";
+@import "mixins";
+@import "global";
+@import "navbar";
 @import "sections";
-@import "services.scss";
-@import "portfolio.scss";
-@import "bootstrap-overrides.scss";  
+@import "portfolio";
+@import "bootstrap-overrides";  
