--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -61,7 +61,7 @@ header.masthead {
 }
 @media (min-width: 768px) {
     header.masthead {
-        background-image: url('../img/header-background-small.jpg');
+        background-image: url('../img/header-background.jpg');
     }
 }
 #about {
